@@ -135,6 +135,7 @@
             <suiteXmlFile>src/test/resources/passing.xml</suiteXmlFile>
           </suiteXmlFiles>
           <systemPropertyVariables>
+            <argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
             <!-- this is a nice perf optimization to have by default but TCKs play with it -->
             <openejb.cdi.applicationScope.cached>false</openejb.cdi.applicationScope.cached>
             <!-- not supported by the spec -->
